--- a/css/style.css
+++ b/css/style.css
@@ -17,17 +17,18 @@ body {
     width: 1000px;
     margin: 0 auto;
     padding: 30px 50px;
-
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    text-align: center;
+    margin: 0 auto;
 }
 
 .card{
+    display: inline-block;
+
     border-radius: 25px;
     width: 200px;
     height: 300px;
     background: #fff;
+    margin: 5px;
 }
 
 .card .header {
